--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,14 @@
     left: 0;
     width: 100%;
     background: white;
-    z-index: 1;
+    z-index: 100;
 }
 .nav h5 {
     background-color: transparent;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
     -ms-transition: all 0.2s ease-out;
@@ -52,7 +56,7 @@
 
 
 .graph--skill-cloud {
-    margin-top: -70px;
+    margin-top: -50px;
 }
 
 @media (min-width: 550px) {
