--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 .header {
     text-decoration: underline;
+    margin-bottom: 15px;
 }
 
 .nav {
@@ -11,10 +12,15 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 60px;
     background: white;
     z-index: 100;
+    border-left: none !important;
+    border-right: none !important;
+    border-top: none !important;
 }
-.nav h5 {
+.nav-link {
+    color: black;
     background-color: transparent;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -26,9 +32,14 @@
     -o-transition: all 0.2s ease-out;
     transition: all 0.2s ease-out;
 }
-.nav h5:hover {
+.nav-link:hover {
+    color: black;
     cursor: pointer;
-    background-color: rgba(227, 205, 231, 0.56);
+    background-color: rgba(176, 152, 196, 0.40);
+}
+
+.footer {
+    margin-top: 35px;
 }
 
 .center {
@@ -52,6 +63,10 @@
 
 .margin-top {
     margin-top: 12px;
+}
+
+.margin-top--big {
+    margin-top: 48px;
 }
 
 
